encode/log.txt
g++ -std=c++11 -Wall -g -c Graph.cpp
In file included from Graph.cpp:1:0:
Graph.h: In member function ‘void Graph::sortByWeight(std::vector<Graph::Node*>&)’:
Graph.h:27:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int i =0;i<v.size();i++){
                   ^
Graph.h:33:5: error: ‘cout’ is not a member of ‘std’
     std::cout<<"here"<<std::endl;
     ^
Graph.h:33:24: error: ‘endl’ is not a member of ‘std’
     std::cout<<"here"<<std::endl;
                        ^
Graph.h:34:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int i =1;i<v.size();i++){
                   ^
makefile:10: recipe for target 'Graph.o' failed
make: *** [Graph.o] Error 1
